<resources>
    <string name="app_name">Study</string>
    <string name="login">登录</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="user_or_password_null">用户名或密码为空</string>
    <string name="user_or_password_error">用户名或密码错误</string>
    <string name="main_study">学习</string>
    <string name="main_java">Java</string>
    <string name="main_android">Android</string>
    <string name="main_kotlin">Kotlin</string>
    <string name="main_arithemic">算法</string>
    <string name="main_other">其他</string>

    <string name="algorithm_tab">常用算法实例</string>
</resources>
